updated with bible verses

--- a/prework-repository-index.html
+++ b/prework-repository-index.html
@@ -2,7 +2,12 @@
 <html lang="en">
 <body>
 <h1>Phillipians 4:6-7, 13</h1>
-
+<p>6
+    Do not be anxious about anything, but in everything, by prayer and petition, with thanksgiving, present your requests to God.
+    7
+    And the peace of God, which transcends all understanding, will guard your hearts and your minds in Christ Jesus.</p>
+    13 
+    I can do all things through Christ which strengtheneth me.
 </body>            
                 
 </html>
