Update More Prework HTML.html

--- a/More Prework HTML.html
+++ b/More Prework HTML.html
@@ -14,8 +14,8 @@
     <p>This is a short paragraph about myself. Just kidding, it's placeholder text so I can complete this assignment. Okay, okay, Virgo. Dog lover. Run half marathons and trail races. I like backpacking and SCUBA diving and learning new things. Literally everything in my life is changing in the next 30-60 days so there is no comfort zone. Live dangerously? Trust in God. He wouldn't have brought me here without a plan.</p>
 <h2>Contact Info:</h2>
 <ul>
-  <li>Email:</li><a href="kerwincormier@gmail.com"></a>
-  <li>GitHub:</li><a href="https://github.com/kerwincormier"></a>
+  <li>Email:</li><a href="kerwincormier@gmail.com">kerwincormier@gmail.com</a>
+  <li>GitHub:</li><a href="https://github.com/kerwincormier">https://github.com/kerwincormier</a>
   <li>Portfolio: coming soon</li>
 </ul>
 </body>
